kubernetes/nginx_testing/nginx-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        # image updated using "kubectl set image deployment.v1.apps/nginx-deployment nginx=nginx:1.16.1"
        image: nginx:1.14.2
        ports:
        - containerPort: 80
